# mcp-tutorial

./: .gitignore  NASA_QUICKSTART.md  README.md  nasa_demo.py  pyproject.toml  setup.sh  test_nasa.py
mcp-client/clients/anthropic/: client.py
mcp-client/clients/gemini/: client_gemini_http_remote.py  client_gemini_local.py  client_gemini_sse_remote.py
mcp-client/clients/nasa/: nasa_gui_client.py
mcp-client/clients/nasa/web/: README.md  nasa_streamlit_app.py  requirements.txt  run_web_app.py  test_gemini.py
mcp-client/docs/: README_GEMINI.md  README_REMOTE.md
mcp-client/server_wrapper/: mcp_http_server_async_remote.py  mcp_sse_server_remote.py  nasa_http_server_sync.py
mcp-client/utils/: debug_mcp.py
mcp-server/: nasa_server.py  weather_server.py
mcp-server/server_wrapper/: mcp_http_server_sync_remote.py
